add module-info.java
add dependency org.openjfx 16
add dependency org.openjdk.nashorn 15.2